added fonts and started styling

--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,1 +1,37 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее*/
+img {
+  object-fit: contain;
+  max-width: 100%;
+  height: auto;
+
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+}
+
+html {
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+
+  @media (min-width: @tablet-width) {
+    font-size: 14px;
+    line-height: 24px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
