--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,1 +1,5 @@
-/* здесь используйте глобальные переменные */
+// Viewports
+
+@mobile-width: 320px;
+@tablet-width: 768px;
+@desktop-width: 1440px;
