--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -3,3 +3,32 @@
 @mobile-width: 320px;
 @tablet-width: 768px;
 @desktop-width: 1440px;
+
+// Colors
+
+@white: #ffffff;
+@grey: #bdbdbd;
+@baseblack: #333333;
+@primary: #7859cf;
+@secondary: #f0ebff;
+
+@primary-lighter: #9070ec;
+@primary-darker: #593cac;
+@grey-light: #e2e2e2;
+
+@background-beige: #f3ebe1;
+@background-lavender: #eAe6fc;
+@background-grey: #e5e6e8;
+
+// Visually-hidden
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
