--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,4 +8,8 @@
 @import "blocks/button";
 @import "blocks/link";
 @import "blocks/navigation";
+@import "blocks/product";
+@import "blocks/text-features";
+@import "blocks/features";
+
 
