--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,4 +1,16 @@
 .button {
-  background-color: transparent;
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  background-color: @background-grey;
   border: none;
+}
+
+.button--primary {
+  padding: 8px 30px;
+
+  background-color: @primary;
+  color: @white;
+  border-radius: 4px;
 }
