--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -7,17 +7,21 @@ img {
   box-sizing: border-box;
 }
 
-body {
+.page__body {
+  margin: 0;
+
   min-height: 100%;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
 }
 
-html {
+.page {
   font-family: "Montserrat", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
   font-weight: 400;
+  color: @baseblack;
+  background-color: @white;
 
   @media (min-width: @tablet-width) {
     font-size: 14px;
@@ -25,13 +29,4 @@ html {
   }
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
+*, *::before, *::after { box-sizing: border-box; };
