--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,4 +1,39 @@
 .features {
   background-color: @white;
   color: @baseblack;
+  text-align: center;
+}
+
+.features__text {
+  display: block;
+}
+
+.features__title {
+  margin: 0;
+
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.features__list {
+  margin: 0;
+  padding: 0;
+}
+
+.features__item {
+  list-style-type: none;
+}
+
+.features__item-title {
+  margin: 0;
+  padding-top: 100px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 32px;
+}
+
+.features__item-text {
+  margin: 0;
 }
