--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -19,6 +19,7 @@
 @background-beige: #f3ebe1;
 @background-lavender: #eAe6fc;
 @background-grey: #e5e6e8;
+@background-grey-light: #f8f8f8;
 
 // Visually-hidden
 
