--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,5 +11,11 @@
 @import "blocks/product";
 @import "blocks/text-features";
 @import "blocks/features";
+@import "blocks/catalog";
+@import "blocks/fieldset";
+@import "blocks/form";
+@import "blocks/catalog-list";
+
+
 
 
