completed basic styling

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,6 +15,10 @@
 @import "blocks/fieldset";
 @import "blocks/form";
 @import "blocks/catalog-list";
+@import "blocks/pagination";
+@import "blocks/social";
+@import "blocks/footer";
+
 
 
 
