--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,4 +1,9 @@
+.footer__wrapper {
+  padding: 7%;
+}
+
 .footer__list-title {
+  margin: 0;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.02em;
@@ -11,7 +16,7 @@
 }
 
 .footer__shop-item {
-  list-style-type: 0;
+  list-style-type: none;
   line-height: 16px;
 }
 
@@ -29,7 +34,7 @@
 }
 
 .footer__media-item {
-  list-style-type: 0;
+  list-style-type: none;
   line-height: 16px;
 }
 
@@ -47,7 +52,7 @@
 }
 
 .footer__contacts-item {
-  list-style-type: 0;
+  list-style-type: none;
 }
 
 .footer__contacts-adress {
@@ -63,7 +68,7 @@
   display: block;
   padding-right: 16px;
   text-align: center;
-  
+
   color: @grey;
   text-decoration: none;
 }
