--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -24,6 +24,7 @@
 
 .form__apply-button {
   min-width: 160px;
+  margin: 0 auto;
 
   font-size: 13px;
   padding-top: 10px;
@@ -32,6 +33,7 @@
 
 .form__clear-button {
   min-width: 160px;
+  margin: 0 auto;
   padding-top: 10px;
   padding-bottom: 10px;
 
