--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -5,7 +5,7 @@
   height: 40px;
   border-radius: 4px;
 
-  background-color: @secondary;
+  background-color: @white;
 }
 
 .pagination__link-text {
@@ -26,6 +26,7 @@
   height: 40px;
 
   list-style-type: none;
+  background-color: @white;
   border-radius: 4px;
 }
 
