--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  background-color: @background-grey;
+  background-color: transparent;
   border: none;
 }
 
