--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,7 +1,77 @@
 .header {
+  position: relative;
   color: #000000;
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    align-items: center;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+.header__navigation {
+  @media (min-width: @desktop-width) {
+    margin-left: auto;
+    width: 881px;
+  }
+}
+
+.header__logo-link {
+  position: absolute;
+  top: 12px;
+  left: 20px;
+
+  @media (min-width: @tablet-width) {
+    top: 21px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: static;
+    padding-top: 7px;
+  }
 }
 
 .header__description {
   display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    width: 130px;
+
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+
+.header__menu-button {
+  padding: 0;
+  position: relative;
+  width: 60px;
+  height: 60px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 24px;
+    left: 22px;
+    width: 16px;
+    height: 1.5px;
+    background-color: @baseblack;
+    box-shadow: 0 5.5px @baseblack, 0 11px @baseblack;
+  }
+}
+
+.header__logo-image {
+  @media (min-width: @tablet-width) {
+    width: 82px;
+    height: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 170px;
+    height: 36px;
+  }
 }
