--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -1,6 +1,28 @@
+.navigation {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: end;
+  }
+
+  @media (min-width: @desktop-width) {
+    justify-content: space-between;
+  }
+}
+
 .navigation__site-list {
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+
+    width: 459px;
+  }
+
+  @media (min-width: @desktop-width) {
+    column-gap: 20px;
+  }
 }
 
 .navigation__site-item {
@@ -9,7 +31,15 @@
   border-bottom: 1px solid @secondary;
 
   &:first-child {
-  border-top: 1px solid @secondary;
+    border-top: 1px solid @secondary;
+  }
+
+  @media (min-width: @tablet-width) {
+    border: none;
+
+    &:first-child {
+      border: none;
+    }
   }
 }
 
@@ -18,25 +48,111 @@
 
   padding-top: 20px;
   padding-bottom: 20px;
-
-  font-size: 16px;
   text-align: center;
+
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
   text-transform: uppercase;
+
+  &:active {
+    background-color: @secondary;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 32px 20px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+
+    &:hover {
+      color: @primary;
+    }
+
+    :active {
+      background-color: @secondary;
+    }
+
+    &:focus {
+      color: @primary;
+    }
+
+    &--current {
+      color: @primary;
+      box-shadow: inset 0 -2px @primary;
+    }
+  }
 }
 
 .navigation__user-list {
+  display: flex;
+  justify-content: end;
+
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @media (min-width: @tablet-width) {
+    padding-right: 20px;
+
+    order: 1;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-right: 0;
+  }
+}
+
+.navigation__user-item {
+  @media (min-width: @tablet-width) {
+    &--toggle {
+      display: none;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 20px;
+  }
 }
 
 .navigation__user-link {
   display: block;
+  padding: 20px 22px;
 
-  background-color: lightsteelblue;
-  padding: 22px;
+  &:active {
+    background-color: @secondary;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 28px 22px;
+
+    &:hover {
+      color: @primary;
+    }
+
+    &:focus {
+      color: @primary;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    column-gap: 8px;
+    padding: 32px 20px;
+  }
 }
 
 .navigation__user-text {
   display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+  }
 }
