--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -8,7 +8,10 @@ img {
 }
 
 .page__body {
+  max-width: 100vw;
   margin: 0;
+
+  overflow-x: hidden;
 
   min-height: 100%;
   display: grid;
@@ -16,6 +19,9 @@ img {
 }
 
 .page {
+  max-width: 100%;
+  overflow-x: hidden;
+
   font-family: "Montserrat", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
