--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -6,6 +6,7 @@
   line-height: 24px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .button--primary {
@@ -14,4 +15,20 @@
   background-color: @primary;
   color: @white;
   border-radius: 4px;
+
+  &:hover {
+    background-color: @primary-lighter;
+  }
+
+  &:focus {
+    background-color: @primary-lighter;
+  }
+
+  &:active {
+    background-color: @primary-darker;
+  }
+
+  &:disabled {
+    background-color: @grey;
+  }
 }
