--- a/source/less/blocks/product-item.less
+++ b/source/less/blocks/product-item.less
@@ -16,6 +16,8 @@
   }
 
   @media (min-width: @tablet-width) {
+    padding: 0 20px;
+
     &--first {
       background: linear-gradient(@background-beige 77%, @white 27%);
     }
@@ -134,7 +136,6 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 18px;
-    padding-bottom: 40px;
 
     font-size: 20px;
     line-height: 32px;
@@ -142,6 +143,8 @@
   }
 
   @media (min-width: @desktop-width) {
+    padding-bottom: 40px;
+
     grid-area: description;
     text-align: left;
   }
