--- a/source/less/blocks/catalog-list.less
+++ b/source/less/blocks/catalog-list.less
@@ -1,4 +1,7 @@
 .catalog-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 20px;
   margin: 0;
   padding: 0;
 }
@@ -16,6 +19,7 @@
 
 .catalog-list__title {
   margin: 0;
+  padding-top: 24px;
 
   font-weight: 700;
   font-size: 18px;
@@ -24,6 +28,13 @@
 
 .catalog-list__description {
   margin: 0;
+  padding-top: 5px;
+}
+
+.catalog-list__wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 16px;
 }
 
 .catalog-list__price {
@@ -37,4 +48,8 @@
   font-size: 14px;
   line-height: 20px;
   padding-left: 22px;
+
+  background-image: url("../../img/add-to-card.svg");
+  background-repeat: no-repeat;
+  background-position: 15% 50%;
 }
