--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -1,4 +1,10 @@
+.pagination {
+  display: flex;
+  justify-content: space-between;
+}
+
 .pagination__link {
+  position: relative;
   display: block;
   box-sizing: border-box;
   width: 40px;
@@ -13,6 +19,8 @@
 }
 
 .pagination__pages-list {
+  display: flex;
+  column-gap: 20px;
   margin: 0;
   padding: 0;
 }
@@ -22,21 +30,27 @@
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  width: 40px;
-  height: 40px;
 
   list-style-type: none;
-  background-color: @white;
-  border-radius: 4px;
 }
 
 .pagination__pages-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+
   font-size: 16px;
   line-height: 24px;
+  background-color: @white;
+  border-radius: 4px;
+
   color: @primary;
 
   &--current {
     font-weight: 600;
     color: @baseblack;
+    background-color: @background-grey-light;
   }
 }
