--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -30,11 +30,11 @@
   }
 
   &:hover {
-    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%)
+    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
   }
 
   &:focus {
-    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%)
+    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
   }
 
   &:active {
@@ -68,11 +68,11 @@
   }
 
   &:hover {
-    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%)
+    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
   }
 
   &:focus {
-    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%)
+    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
   }
 
   &:active {
