--- a/source/less/style.less
+++ b/source/less/style.less
@@ -17,5 +17,6 @@
 @import "blocks/form";
 @import "blocks/catalog-list";
 @import "blocks/pagination";
+@import "blocks/map";
 @import "blocks/social";
 @import "blocks/footer";
