--- a/source/less/blocks/catalog-list.less
+++ b/source/less/blocks/catalog-list.less
@@ -4,12 +4,41 @@
   row-gap: 20px;
   margin: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .catalog-list__item {
   padding: 14% 7% 7% 7%;
   list-style-type: none;
   background-color: @white;
+  border-radius: 4px;
+
+  @media (min-width: @tablet-width) {
+    padding: 50px 30px 30px;
+  }
+
+  // &:hover {
+  //   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+  // }
+
+  // &:focus-within {
+  //   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+  // }
+}
+
+.catalog-list__link {
+  &:focus {
+    outline: none;
+  }
 }
 
 .catalog-list__image {
@@ -24,17 +53,36 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 32px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 24px;
+    line-height: 36px;
+    padding-top: 30px;
+  }
 }
 
 .catalog-list__description {
   margin: 0;
   padding-top: 5px;
+
+  @media (min-width: @tablet-width) {
+    line-height: 20px;
+    padding-top: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    letter-spacing: -0.03em;
+  }
 }
 
 .catalog-list__wrapper {
   display: flex;
   justify-content: space-between;
   padding-top: 16px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 20px;
+  }
 }
 
 .catalog-list__price {
