--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,11 +1,32 @@
 .catalog {
   background-color: @background-grey-light;
   padding: 50px 6% 44px;
+
+  @media (min-width: @tablet-width) {
+    padding: 80px 20px 90px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 100px 40px 120px;
+    display: grid;
+    grid-template-columns: 318px, 1fr;
+    column-gap: 30px;
+    grid-template-areas:
+      "text text"
+      "title title"
+      "form sort"
+      "form catalog"
+      "pages pages";
+  }
 }
 
 .catalog__text {
   display: block;
   text-align: center;
+
+  @media (min-width: @desktop-width) {
+    grid-area: text;
+  }
 }
 
 .catalog__title {
@@ -16,6 +37,24 @@
   font-size: 24px;
   line-height: 36px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    font-size: 42px;
+    line-height: 64px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 35px;
+    grid-area: title;
+  }
+}
+
+.catalog__form {
+  @media (min-width: @desktop-width) {
+    width: 318px;
+    padding-top: 5px;
+    grid-area: form;
+  }
 }
 
 .catalog__sort-wrapper {
@@ -39,6 +78,17 @@
     background-repeat: no-repeat;
     z-index: 1;
   }
+
+  @media (min-width: @tablet-width) {
+    justify-content: end;
+    column-gap: 21px;
+
+    padding-bottom: 28px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-area: sort;
+  }
 }
 
 .catalog__sort-label {
@@ -61,6 +111,21 @@
   appearance: none;
 }
 
+.catalog__list {
+  @media (min-width: @desktop-width) {
+    grid-area: catalog;
+  }
+}
+
 .catalog__pagination {
-  padding-top: 40px;
+  margin-top: 40px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-area: pages;
+    margin-top: 63px;
+  }
 }
