grids for mobile footer

--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,6 +1,6 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее*/
 img {
-  object-fit: contain;
+  object-fit: cover;
   max-width: 100%;
   height: auto;
 
