--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,9 +1,21 @@
 .footer__wrapper {
-  padding: 7%;
+  padding: 20px 20px 17px;
+
+  &--primary {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 15px;
+  }
+
+  @media (max-width: (@mobile-width + 1)) {
+    border-bottom: 1px solid @secondary;
+  }
 }
 
 .footer__list-title {
   margin: 0;
+  padding-bottom: 11px;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.02em;
@@ -21,6 +33,8 @@
 }
 
 .footer__shop-link {
+  display: block;
+  padding: 10px 0;
   font-weight: 500;
   font-size: 12px;
   letter-spacing: 0.02em;
@@ -39,6 +53,8 @@
 }
 
 .footer__media-link {
+  display: block;
+  padding: 10px 0;
   font-weight: 500;
   font-size: 12px;
   letter-spacing: 0.02em;
@@ -56,19 +72,32 @@
 }
 
 .footer__contacts-adress {
+  padding: 10px 0 12px;
   font-style: normal;
   padding-left: 19px;
+
+  background-image: url("../../img/adress-marker.svg");
+  background-repeat: no-repeat;
+  background-position: 0 12px;
 }
 
 .footer__contacts-tel {
+  display: block;
+  padding-top: 5px;
   padding-left: 19px;
+
+  background-image: url("../../img/phone.svg");
+  background-repeat: no-repeat;
+  background-position: 0 6px;
 }
 
 .footer__copyright {
   display: block;
-  padding-right: 16px;
+  padding: 20px 16px 20px 0;
   text-align: center;
 
+  font-size: 12px;
+  line-height: 16px;
   color: @grey;
   text-decoration: none;
 }
