--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,12 +1,21 @@
 .social {
+  width: 160px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
   margin: 0;
   padding: 0;
-
-  background-color: @secondary;
 }
 
 .social__item {
+  list-style-type: none;
+}
+
+.social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   height: 40px;
-  list-style-type: none;
 }
