--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,15 +1,72 @@
+.footer {
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 23px 30px;
+    padding: 35px 20px 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: repeat(4, 1fr);
+    padding: 40px 40px 0;
+    row-gap: 12px;
+  }
+}
+
 .footer__wrapper {
   padding: 20px 20px 17px;
 
   &--primary {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    align-items: flex-start;
     justify-content: space-between;
     padding-top: 15px;
   }
 
   @media (max-width: (@mobile-width + 1)) {
     border-bottom: 1px solid @secondary;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+
+    &--primary {
+      grid-column: 1 / -1;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-column: auto;
+    flex-direction: column;
+    justify-content: start;
+  }
+}
+
+// .footer__logo-link {
+//   display: block;
+// }
+
+.footer__logo-image {
+  @media (min-width: @desktop-width) {
+    display: block;
+    margin-top: -9px;
+  }
+}
+
+.footer__description {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    padding-top: 10px;
+  }
+}
+
+.footer__social {
+  @media (min-width: @desktop-width) {
+    margin-top: 45px;
   }
 }
 
@@ -20,6 +77,10 @@
   font-size: 14px;
   letter-spacing: 0.02em;
   color: @primary;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 7px;
+  }
 }
 
 .footer__shop-list {
@@ -79,6 +140,12 @@
   background-image: url("../../img/adress-marker.svg");
   background-repeat: no-repeat;
   background-position: 0 12px;
+
+  @media (min-width: @tablet-width) {
+    line-height: 20px;
+  }
+
+  @media (min-width: @desktop-width) {}
 }
 
 .footer__contacts-tel {
@@ -93,11 +160,24 @@
 
 .footer__copyright {
   display: block;
-  padding: 20px 16px 20px 0;
+  padding: 20px 0;
   text-align: center;
 
   font-size: 12px;
   line-height: 16px;
   color: @grey;
   text-decoration: none;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    width: 210px;
+    justify-content: space-between;
+    align-items: center;
+    grid-column: 1 / -1;
+
+    padding: 6px 0 40px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {}
 }
