--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,8 @@
 .map__image {
+  width: 100%;
+  height: 420px;
+  
   @media (min-width: @tablet-width) {
-    width: 100%;
     height: 480px;
   }
 
