--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -4,7 +4,7 @@
 
   @media (min-width: @tablet-width) {
     justify-content: end;
-    margin-right: -17px;
+    column-gap: 20px;
   }
 }
 
@@ -19,12 +19,24 @@
 
   background-color: @white;
 
+  @media (max-width: (@mobile-width + 1)) {
+    background-image: url("../../img/sort-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    rotate: 90deg;
+
+    &--next {
+      rotate: -90deg;
+    }
+  }
+
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 8px 20px;
 
-    width: 141px;
+    width: auto;
   }
 
   &:hover {
@@ -54,9 +66,8 @@
   @media (min-width: @tablet-width) {
     display: block;
 
-    &--prev {
-      padding-left: 10px;
-    }
+    font-size: 16px;
+    line-height: 24px;
   }
 }
 
