--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -18,4 +18,12 @@
   align-items: center;
   width: 40px;
   height: 40px;
+
+  color: @grey;
+
+  &:hover {
+    color: @primary;
+    background-color: @secondary;
+    border-radius: 4px;
+  }
 }
