add js for a map

--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -14,8 +14,8 @@ img {
   overflow-x: hidden;
 
   min-height: 100%;
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
+  // display: grid;
+  // grid-template-rows: min-content 1fr min-content;
 }
 
 .page {
@@ -33,6 +33,10 @@ img {
     font-size: 14px;
     line-height: 24px;
   }
+}
+
+.swiper {
+  position: relative;
 }
 
 *,
