--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,4 +1,22 @@
 .map__image {
+  display: none;
+  width: 100%;
+  height: 420px;
+
+  &--nojs {
+    display: block;
+  }
+
+  @media (min-width: @tablet-width) {
+    height: 480px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 540px;
+  }
+}
+
+.map__canvas {
   width: 100%;
   height: 420px;
 
@@ -10,3 +28,4 @@
     height: 540px;
   }
 }
+
