--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,7 @@
 @import "blocks/link";
 @import "blocks/navigation";
 @import "blocks/product";
+@import "blocks/swiper";
 @import "blocks/product-item";
 @import "blocks/text-features";
 @import "blocks/features";
