--- a/source/less/blocks/catalog-list.less
+++ b/source/less/blocks/catalog-list.less
@@ -26,13 +26,13 @@
     padding: 50px 30px 30px;
   }
 
-  // &:hover {
-  //   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-  // }
+  &:hover {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  }
 
-  // &:focus-within {
-  //   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-  // }
+  &:focus-within {
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  }
 }
 
 .catalog-list__link {
