--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -52,6 +52,7 @@
   @media (min-width: @desktop-width) {
     column-gap: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding-top: 72px;
   }
