--- a/source/less/blocks/pagination.less
+++ b/source/less/blocks/pagination.less
@@ -1,5 +1,6 @@
 .pagination {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   @media (min-width: @tablet-width) {
@@ -12,8 +13,8 @@
   position: relative;
   display: block;
   box-sizing: border-box;
-  width: 40px;
-  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
   border-radius: 4px;
   color: @primary;
 
@@ -73,6 +74,7 @@
 
 .pagination__pages-list {
   display: flex;
+  flex-wrap: wrap;
   column-gap: 20px;
   margin: 0;
   padding: 0;
@@ -91,8 +93,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
 
   font-size: 16px;
   line-height: 24px;
