--- a/source/less/blocks/swiper.less
+++ b/source/less/blocks/swiper.less
@@ -1,10 +1,13 @@
 .swiper-pagination {
+  display: none;
   padding-bottom: 55px;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+  }
 }
 
 .swiper-pagination-bullet {
-  display: none;
-  
   @media (min-width: @desktop-width) {
     height: 4px;
     width: 62px;
@@ -32,10 +35,10 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-&::after {
-  content: "";
-  margin-top: 0;
-}
+  &::after {
+    content: "";
+    margin-top: 0;
+  }
 }
 
 .swiper-button-prev {
@@ -48,27 +51,27 @@
 
   background-image: url("../../img/slider-arrow.svg");
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 50% 46.5%;
   rotate: 180deg;
 
   @media (min-width: @tablet-width) {
     width: 80px;
-    background-position: 50% 62.5%;
+    background-position: 50% 59%;
   }
 
   @media (min-width: @desktop-width) {
-    background-position: 50% 50%;
+    background-position: 50% 47%;
 
     &:hover {
-      background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+      background: no-repeat 50% 47% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
     }
 
     &:focus {
-      background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+      background: no-repeat 50% 47% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
     }
 
     &:active {
-      background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(120, 89, 207, 0) 0%, rgba(120, 89, 207, 0.25) 100%);
+      background: no-repeat 50% 47% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(120, 89, 207, 0) 0%, rgba(120, 89, 207, 0.25) 100%);
     }
   }
 
@@ -87,27 +90,27 @@
 
   background-image: url("../../img/slider-arrow.svg");
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 50% 53.5%;
 
   @media (min-width: @tablet-width) {
     width: 80px;
-    background-position: 50% 37.5%;
+    background-position: 50% 41%;
   }
 
   @media (min-width: @desktop-width) {
-    background-position: 50% 50%;
+    background-position: 50% 53%;
 
-  &:hover {
-    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
-  }
+    &:hover {
+      background: no-repeat 50% 53% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+    }
 
-  &:focus {
-    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
-  }
+    &:focus {
+      background: no-repeat 50% 53% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #ffffff 100%);
+    }
 
-  &:active {
-    background: no-repeat 50% 50% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(120, 89, 207, 0) 0%, rgba(120, 89, 207, 0.25) 100%);
-  }
+    &:active {
+      background: no-repeat 50% 53% url("../../img/slider-arrow.svg"), linear-gradient(90deg, rgba(120, 89, 207, 0) 0%, rgba(120, 89, 207, 0.25) 100%);
+    }
   }
 
   &:disabled {
