--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -166,7 +166,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    max-width: 245px;
+    width: 285px;
+    max-width: 295px;
     padding-right: 0;
   }
 }
