--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -44,6 +44,10 @@
 }
 
 .footer__logo-image {
+  @media (min-width: @tablet-width) {
+    width: 170px;
+  }
+
   @media (min-width: @desktop-width) {
     display: block;
     margin-top: -9px;
