--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-regular.woff") format("woff");
+  src: url("../../fonts/montserrat-regular.woff2") format(woff2),
+    url("../../fonts/montserrat-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +9,8 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-medium.woff") format("woff");
+  src: url("../../fonts/montserrat-medium.woff2") format("woff2"),
+    url("../../fonts/montserrat-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -16,7 +18,8 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-semibold.woff") format("woff");
+  src: url("../../fonts/montserrat-semibold.woff2") format("woff2"),
+    url("../../fonts/montserrat-semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -24,7 +27,8 @@
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../../fonts/montserrat-bold.woff") format("woff");
+  src: url("../../fonts/montserrat-bold.woff2") format("woff2"),
+    url("../../fonts/montserrat-bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
