--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -147,6 +147,12 @@
   color: @baseblack;
   appearance: textfield;
 
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    appearance: none;
+    margin: 0;
+  }
+
   @media (min-width: @tablet-width) {
     width: 92px;
   }
